# swim-with-mantas

./: .gitignore  CMakeLists.txt  README.md
lib/stb_image/: stb_image.cpp
shaders/: shader.frag  shader.vert  water.frag  water.vert
src/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Cube.cpp  Cube.hpp  FreeCam.cpp  FreeCam.hpp  Mesh.cpp  Mesh.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp  stb_image.cpp
src/Helpers/: loadTextureHelpers.hpp  loadTextureImage.hpp
src/Scenes/: MainScene.cpp  MainScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  WaterScene.cpp  WaterScene.hpp
